# ppt-agent

./: .env.example  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  ppt2svg.py  pyproject.toml  交互逻辑.md
.codex/: config.toml
agent/: app.py  bridge.py  build_model.py  cache_key_func.py  config.py  constant.py  extractors.py  modify_ppt.py  node.py  ppt_agent.py  prompt.py  state.py  task.py  task_node.py  types.py  utils.py
agent/backend/: main.py
backend/: __init__.py  app.py  db.py  main.py  session_models.py  session_store.py
docs/superpowers/specs/: 2026-04-08-multi-session-chat-ui-design.md  2026-04-15-ppt-agent-frontend-design.md
frontend/: app.py  package.json  pnpm-lock.yaml  types.py  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  main.tsx  pptExport.ts  types.ts
frontend/src/components/: ChatThread.test.tsx  ChatThread.tsx  InterruptCard.tsx  PreviewPanel.tsx  SessionSidebar.test.tsx  SessionSidebar.tsx  TopTimeline.tsx
generated_ppt/deepseekR1的介绍/: ppt-agent-draft.pptx  ppt-agent-final.pptx
generated_ppt/langchain和其他竞品比较/: ppt-agent-draft.pptx  ppt-agent-final.pptx
src/: package.json  pnpm-lock.yaml
src/backend/: main.py  svg2ppt3.py  svg2pptx1.py  svg2pptx2.py  test_cancel_api.py  接口文档.md
src/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
src/frontend/src/: App.css  App.tsx  index.css  main.tsx
src/frontend/src/hooks/: usePptAgentSession.ts
src/frontend/src/lib/: chat-stream.ts  ppt-agent-api.ts  ppt-export.ts
src/frontend/src/state/: session-state.ts
src/frontend/src/test/: App.integration.test.tsx  chat-stream.test.ts  session-state.test.ts  setup.ts
src/ppt_agent/: app.py  bridge.py  build_model.py  cache_key_func.py  extractors.py  mineru_parser_batch.py  modify_ppt.py  node.py  ppt_agent.py  prompt.py  state.py  task.py  task_node.py  temp.py  utils.py
test/backend/: test_session_store.py  test_sessions_api.py
(+14 files in other folders)
