[project]
name = "ppt-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aspose-slides>=26.3.0",
    "fastapi[standard]>=0.135.2",
    "gohumanloop>=0.0.15",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.3",
    "langgraph-cli[inmem]>=0.4.19",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.22",
    "streamlit>=1.55.0",
]
